Add status icons and labels to side navigation

--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -25,7 +25,7 @@
 
   .p-side-navigation__text,
   .p-side-navigation__link {
-    display: block;
+    display: flex;
     padding: $spv-inner--x-small $sph-inner--small $spv-inner--x-small $sph-inner;
 
     // nested 2 or 3 levels
@@ -50,6 +50,11 @@
     &:hover {
       text-decoration: none;
     }
+  }
+
+  .p-side-navigation__status {
+    margin-left: auto;
+    padding-left: $spv-outer--small;
   }
 
   // default light theme
