--- a/templates/docs/examples/patterns/side-navigation/default.html
+++ b/templates/docs/examples/patterns/side-navigation/default.html
@@ -13,10 +13,13 @@
       <a class="p-side-navigation__link" href="#">First level link</a>
     </li>
     <li class="p-side-navigation__item">
+      <a class="p-side-navigation__link" href="#">First level link with status<div class="p-side-navigation__status"><i class="p-icon--error"></i></div></a>
+    </li>
+    <li class="p-side-navigation__item">
       <a class="p-side-navigation__link" href="#">Link with children</a>
       <ul class="p-side-navigation__list">
         <li class="p-side-navigation__item">
-          <a class="p-side-navigation__link" href="#">Second level link</a>
+          <a class="p-side-navigation__link" href="#">Second level link<div class="p-side-navigation__status"><i class="p-icon--warning"></i></div></a>
         </li>
         <li class="p-side-navigation__item ">
           <span class="p-side-navigation__text">Second level text</span>
@@ -31,7 +34,7 @@
               <a class="p-side-navigation__link is-active" href="#">Third level active link</a>
             </li>
             <li class="p-side-navigation__item ">
-              <a class="p-side-navigation__link" href="#">Third level link</a>
+              <a class="p-side-navigation__link" href="#">Third level link with status<div class="p-side-navigation__status"><i class="p-icon--success"></i></div></a>
             </li>
           </ul>
         </li>
@@ -41,7 +44,7 @@
       <span class="p-side-navigation__text">First level item that is not a link</span>
     </li>
     <li class="p-side-navigation__item ">
-      <a class="p-side-navigation__link" href="#">First level link</a>
+      <a class="p-side-navigation__link" href="#">First level link with a label<div class="p-side-navigation__status"><span class="p-label--new">New</span></div></a>
     </li>
   </ul>
   <ul class="p-side-navigation__list">
