Document status styles for side navigation

--- a/templates/docs/examples/patterns/side-navigation/docs.html
+++ b/templates/docs/examples/patterns/side-navigation/docs.html
@@ -16,7 +16,7 @@
       <a class="p-side-navigation__link" href="#">Explore MAAS</a>
     </li>
     <li class="p-side-navigation__item ">
-      <a class="p-side-navigation__link" href="#">Quick start</a>
+      <a class="p-side-navigation__link" href="#">Quick start<span class="p-side-navigation__status"><span class="p-label--new">New</span></span></a>
     </li>
   </ul>
   <ul class="p-side-navigation__list">
@@ -66,7 +66,7 @@
           <a class="p-side-navigation__link" href="#">Upgrade from 2.3 to 2.4</a>
         </li>
         <li class="p-side-navigation__item ">
-          <a class="p-side-navigation__link" href="#">Upgrade from 1.9 to 2.x</a>
+          <a class="p-side-navigation__link" href="#">Upgrade from 1.9 to 2.x<span class="p-side-navigation__status"><i class="p-icon--warning"></i></span></a>
         </li>
       </ul>
     </li>
