Remove bottom margin from label component

--- a/scss/_patterns_label.scss
+++ b/scss/_patterns_label.scss
@@ -4,6 +4,8 @@
 @mixin vf-p-label {
   %vf-label {
     @extend %x-small-text;
+    @extend %u-no-margin--bottom--small;
+
     border-radius: $border-radius;
     display: inline-block;
     font-weight: 400;
