Add icons and labels to standalone example

--- a/scss/standalone/patterns_side-navigation.scss
+++ b/scss/standalone/patterns_side-navigation.scss
@@ -1,5 +1,12 @@
 @import '../base';
 @include vf-base;
 
+// labels and icons for navigation statuses
+@import '../patterns_label';
+@include vf-p-label;
+
+@import '../patterns_icons';
+@include vf-p-icons;
+
 @import '../patterns_side-navigation';
 @include vf-p-side-navigation;
