Update spacing from the right side of side navigation

--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -26,7 +26,7 @@
   .p-side-navigation__text,
   .p-side-navigation__link {
     display: flex;
-    padding: $spv-inner--x-small $sph-inner--small $spv-inner--x-small $sph-inner;
+    padding: $spv-inner--x-small $sph-inner $spv-inner--x-small $sph-inner;
 
     // nested 2 or 3 levels
     .p-side-navigation__item .p-side-navigation__item & {
@@ -54,7 +54,7 @@
 
   .p-side-navigation__status {
     margin-left: auto;
-    padding-left: $spv-outer--small;
+    padding-left: $spv-inner--small;
   }
 
   // default light theme
