--- a/templates/docs/examples/templates/maas-layout.html
+++ b/templates/docs/examples/templates/maas-layout.html
@@ -1,5 +1,5 @@
 {% extends "_layouts/examples.html" %}
-{% block title %}MAAS{% endblock %}
+{% block title %}MAAS layout{% endblock %}
 
 {% block content %}
 <header id="navigation" class="p-navigation">
