Add examples to cover different usage variants

--- a/scss/_patterns_label.scss
+++ b/scss/_patterns_label.scss
@@ -12,6 +12,7 @@
     padding: map-get($nudges, nudge--x-small) $sph-inner--small;
     text-align: center;
     text-decoration: none;
+    white-space: nowrap;
   }
 
   @include vf-p-label-validated;
