Adds script to make side navigation examples interactive

--- a/templates/docs/examples/patterns/side-navigation/default.html
+++ b/templates/docs/examples/patterns/side-navigation/default.html
@@ -12,4 +12,8 @@
       {% include "docs/examples/patterns/side-navigation/_icons.html" %}
   </div>
 </div>
+
+<script>
+  {% include "docs/examples/patterns/side-navigation/_script.js" %}
+</script>
 {% endblock %}
