--- a/templates/docs/examples/templates/maas-docs-grid.html
+++ b/templates/docs/examples/templates/maas-docs-grid.html
@@ -179,4 +179,8 @@
     </div>
   </nav>
 </footer>
+
+<script>
+  {% include "docs/examples/patterns/side-navigation/_script.js" %}
+</script>
 {% endblock %}
