--- a/templates/docs/examples/templates/maas-docs.html
+++ b/templates/docs/examples/templates/maas-docs.html
@@ -236,4 +236,8 @@
     </div>
   </nav>
 </footer>
+
+<script>
+  {% include "docs/examples/patterns/side-navigation/_script.js" %}
+</script>
 {% endblock %}
