--- a/templates/docs/examples/templates/snapcraft-publicise.html
+++ b/templates/docs/examples/templates/snapcraft-publicise.html
@@ -346,4 +346,8 @@
     </ul>
   </div>
 </footer>
+
+<script>
+  {% include "docs/examples/patterns/side-navigation/_script.js" %}
+</script>
 {% endblock %}
