--- a/scss/standalone/patterns_side-navigation.scss
+++ b/scss/standalone/patterns_side-navigation.scss
@@ -8,5 +8,9 @@
 @import '../patterns_icons';
 @include vf-p-icons;
 
+// grid is used in group example with differents side nav variants
+@import '../patterns_grid';
+@include vf-p-grid;
+
 @import '../patterns_side-navigation';
 @include vf-p-side-navigation;
