--- a/templates/docs/examples/layouts/documentation-layout.html
+++ b/templates/docs/examples/layouts/documentation-layout.html
@@ -2,12 +2,6 @@
 {% block title %}Documentation - Layout{% endblock %}
 
 {% block content %}
-<style>
-
-
-</style>
-<div class="l-docs">
-
 <header id="navigation" class="p-navigation is-dark">
   <div class="p-navigation__row">
     <div class="p-navigation__banner">
@@ -46,8 +40,8 @@
 </section>
 
 
-  <div class="l-docs__wrapper">
-    <aside class="l-docs__sidebar">
+  <div class="l-fixed-width--with-sidebar">
+    <aside class="l-sidebar">
       <nav class="p-side-navigation">
         <ul class="p-side-navigation__list">
           <li class="p-side-navigation__item--title">
@@ -98,7 +92,7 @@
       </nav>
     </aside>
 
-    <main class="l-docs__content" id="main-content">
+    <main class="l-content" id="main-content">
       <h1>Main documentation content</h1>
       <p>Main documentation content block is contained in grid <code>col-9</code>. Any standard base elements or Vanilla components can be used in the documentation pages.</p>
 
@@ -264,23 +258,8 @@
         <div class="col-1">
           <span>.col-1</span>
         </div>
-        <div class="col-1">
-          <span>.col-1</span>
-        </div>
-        <div class="col-1">
-          <span>.col-1</span>
-        </div>
-        <div class="col-1">
-          <span>.col-1</span>
-        </div>
       </div>
       <div class="row">
-        <div class="col-2">
-          <span>.col-2</span>
-        </div>
-        <div class="col-2">
-          <span>.col-2</span>
-        </div>
         <div class="col-2">
           <span>.col-2</span>
         </div>
@@ -304,8 +283,13 @@
         <div class="col-3">
           <span>.col-3</span>
         </div>
-        <div class="col-3">
-          <span>.col-3</span>
+      </div>
+      <div class="row">
+        <div class="col-4">
+          <span>.col-4</span>
+        </div>
+        <div class="col-4">
+          <span>.col-4</span>
         </div>
       </div>
       </div>
@@ -403,7 +387,6 @@
   </nav>
 </footer>
 
-</div>
 <script>
   {% include "docs/examples/patterns/side-navigation/_script.js" %}
 </script>
