--- a/templates/_layouts/examples.html
+++ b/templates/_layouts/examples.html
@@ -68,7 +68,7 @@
     </script>
   </head>
 
-  <body>
+  <body class="{% block body_class %}{% endblock %}">
     {% block content %}{% endblock %}
   </body>
 </html>
