--- a/templates/docs/examples/layouts/documentation-layout-2.html
+++ b/templates/docs/examples/layouts/documentation-layout-2.html
@@ -1,7 +1,9 @@
 {% extends "_layouts/examples.html" %}
-{% block title %}Documentation - Layout{% endblock %}
+{% block title %}Documentation - Layout with regions{% endblock %}
 
 {% block content %}
+<div class="l-header">
+
 <header id="navigation" class="p-navigation is-dark">
   <div class="p-navigation__row">
     <div class="p-navigation__banner">
@@ -29,6 +31,10 @@
   </div>
 </header>
 
+</div>
+
+<div class="l-hero">
+
 <section id="search-docs" class="p-strip--light is-shallow">
   <div class="row">
     <form class="p-search-box u-no-margin--bottom" action="#">
@@ -39,7 +45,10 @@
   </div>
 </section>
 
+</div>
 
+<div class="l-content">
+  <div class="p-strip is-bordered">
   <div class="l-fixed-width--with-sidebar">
     <aside class="l-aside">
       <nav class="p-side-navigation">
@@ -93,6 +102,9 @@
     </aside>
 
     <main class="l-main" id="main-content">
+      <h1>Documentation layout with regions</h1>
+      <p>In this example page is built of severaly regions (header, hero, content, footer). Each of the regions contains independent components. Content region additionally contains layout child elements to build sidebar / main content split.</p>
+
       <h1>Main documentation content</h1>
       <p>Main documentation content block is contained in grid <code>col-9</code>. Any standard base elements or Vanilla components can be used in the documentation pages.</p>
 
@@ -295,7 +307,10 @@
       </div>
     </main>
   </div>
+  </div>
+</div>
 
+<div class="l-footer">
 <div class="p-strip grid-demo">
   <div class="row">
     <div class="col-1">
@@ -370,6 +385,8 @@
     </div>
   </div>
 </div>
+
+
 <footer class="p-strip--light">
   <nav class="row">
     <div class="has-cookie">
@@ -386,6 +403,8 @@
     </div>
   </nav>
 </footer>
+
+</div>
 
 <script>
   {% include "docs/examples/patterns/side-navigation/_script.js" %}
